sample-app-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: dev   
  labels:
    app: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      securityContext:
      containers:
      - name: sample-app
        image: 713117837264.dkr.ecr.eu-west-2.amazonaws.com/sample-app:latest
        ports:
        - containerPort: 8000
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
