sample-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: dev
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: sample-app
  type: ClusterIP
