sample-app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:  
    #kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-expires: "900"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "900"
    nginx.ingress.kubernetes.io/session-cookie-name: route
  name: sample-app-ing
  namespace: dev
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: sample-app
      port:
        number: 80
  rules:
  - host: sa.payplus.co.il
    http:
      paths:
      - backend:
          service:
            name: sample-app
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - sa.payplus.co.il
    secretName: sample-app-dev-tls
